fix printing empty pages on firefox. narrowed down to this rule, so applying this to screen only

--- a/scss/_images.scss
+++ b/scss/_images.scss
@@ -1,8 +1,11 @@
 .n-content-image {
-	margin: 0 auto 1em;
 	max-width: 100%;
 	clear: left;
 	page-break-inside: avoid;
+
+	@media screen {
+		margin: 0 auto 1em;
+	}
 
 	img {
 		display: block;
